--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx}\"",
     "preview": "vite preview",
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
@@ -56,6 +58,7 @@
     "zustand": "^4.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.0.0",
     "@tauri-apps/cli": ">=2.0.0",
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.12",
@@ -71,9 +74,9 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "lucide-react": "^0.542.0",
+    "prettier": "^3.6.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^4.0.0",
-    "@tailwindcss/vite": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.6.2",
     "vite": "^6.0.1"
