--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@tauri-apps/api": ">=2.0.0",
     "@tauri-apps/plugin-log": "~2",
     "@tauri-apps/plugin-shell": ">=2.0.0",
+    "cmdk": "^1.1.1",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
